export type Doctors = {
  createdAt: Date;
  drRolesId: number | null;
  drSpecialization: string | null;
  drUmsId: string | null;
  id: string;
  updatedAt: Date;
};
