export type Feedbacks = {
  createdAt: Date;
  fbDescription: string | null;
  fbRating: number | null;
  fbRolesId: number | null;
  fbStatus: string | null;
  fbSubject: string | null;
  fbUmsId: string | null;
  id: string;
  updatedAt: Date;
};
