export type Hospitals = {
  createdAt: Date;
  hsptlHospitalName: string | null;
  hsptlLocation: string | null;
  hsptlRolesId: number | null;
  hsptlUmsId: string | null;
  id: string;
  updatedAt: Date;
};
