export type Patients = {
  createdAt: Date;
  id: string;
  ptDateOfBirth: Date | null;
  ptGender: string | null;
  ptRolesId: number | null;
  ptUmsId: string | null;
  updatedAt: Date;
};
