export type Roles = {
  createdAt: Date;
  id: string;
  rleRoleName: string | null;
  roleName: string | null;
  updatedAt: Date;
};
