export type Symptoms = {
  createdAt: Date;
  id: string;
  symDate: Date | null;
  symPatientId: string | null;
  symReportedSymptoms: string | null;
  symRolesId: number | null;
  symStatus: string | null;
  updatedAt: Date;
};
